--- a/TestConsole/TestConsole.csproj
+++ b/TestConsole/TestConsole.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OrderSimulator\OrderSimulator.csproj" />
     <ProjectReference Include="..\SoftwareSimulator\SoftwareSimulator.csproj" />
     <ProjectReference Include="..\TransportSimulator\TransportSimulator.csproj" />
   </ItemGroup>
