--- a/TestConsole/TestConsole.csproj
+++ b/TestConsole/TestConsole.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\OrderSimulator\OrderSimulator.csproj" />
     <ProjectReference Include="..\PaymentSimulatorStrategyPattern\PaymentSimulatorStrategyPattern.csproj" />
+    <ProjectReference Include="..\PizzaSimulatorDecoratorPattern\PizzaSimulatorDecoratorPattern.csproj" />
     <ProjectReference Include="..\SoftwareSimulator\SoftwareSimulator.csproj" />
     <ProjectReference Include="..\TransportSimulator\TransportSimulator.csproj" />
     <ProjectReference Include="..\WeatherForecastObserverPullPattern\WeatherForecastObserverPullPattern.csproj" />
